--- a/jobspree/tracker/templates/tracker/base.html
+++ b/jobspree/tracker/templates/tracker/base.html
@@ -13,6 +13,8 @@
         <img class="main-logo" src={% static '/images/JobSpreeLogo.svg' %} alt="logo">
         <ul class="nav-right">
             <li class="nav-item"><a href="/home">home</a></li>
+            <li class="nav-item"><a href="/applying">applying</a></li>
+            <li class="nav-item"><a href="/applied">applied</a></li>
 
         </ul>
         <ul class="nav-left">
