--- a/jobspree/tracker/templates/tracker/applied.html
+++ b/jobspree/tracker/templates/tracker/applied.html
@@ -11,7 +11,7 @@
               <td>{{ row.company }}</td>
               <td>{{ row.date }}</td>
               <td>{{ row.result }}</td>
-              <td>{{ row.score }}</td>
+              <td>{{ row.score }}<a href="/delete-applied/{{row.id}}">X</a></td>
             </tr>
     {% endfor %}
     </table>
