--- a/jobspree/tracker/static/css/style.css
+++ b/jobspree/tracker/static/css/style.css
@@ -12,6 +12,7 @@ nav{
     background-color: rgb(201, 201, 201);
     display: flex;
     justify-content: space-between;
+    height: 50px;
 }
 .main-logo{
     width: 80px;
@@ -58,4 +59,73 @@ table {
   .form-container input{
         border: 1px solid #dddddd;
     flex-grow: 1;
+  }
+
+  .main-container{
+    width: 100%;
+    height: calc(100vh - 50px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .info-container{
+    background-color: rgb(176, 176, 176);
+    height: 90%;
+    width: 80%;
+    border-radius: 40px;
+    display: flex;
+  }
+
+  .info-container-left{
+    width: 50%;
+    height: 100%;
+    border-right: black 2px solid;
+  }
+  .info-container-right{
+    width: 50%;
+    height: 100%;
+    border-left: black 2px solid;
+  }
+
+  .info-header{
+    font-size: 70px;
+    text-align: center;
+    border-bottom: black 4px solid;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height:85px;
+  }
+  .info-score{
+    display: flex;
+    font-size: 50px;
+    background-color: rgb(223, 223, 223);
+    border-radius: 40px 0px 0px 0px;
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
+    margin : 6px;
+  }
+  .info-body{
+    width: 100%;
+    height: calc(100% - 85px) ;
+  }
+  .info-date{
+    width: 100%;
+    height: 100px;
+    font-size: 40px;
+    text-align: center;
+    padding: 30px 0px;
+  }
+
+  .info-result{
+    width: 100%;
+    height: calc(100% - 185px);
+    font-size: 40px;
+    text-align: center;
+    padding: 30px 0px;
   }
