Added home page + basic graph

--- a/jobspree/tracker/templates/tracker/base.html
+++ b/jobspree/tracker/templates/tracker/base.html
@@ -15,6 +15,7 @@
             <li class="nav-item"><a href="/home">home</a></li>
             <li class="nav-item"><a href="/applying">applying</a></li>
             <li class="nav-item"><a href="/applied">applied</a></li>
+            <li class="nav-item"><a href="/interviews">interviews</a></li>
 
         </ul>
         <ul class="nav-left">
