--- a/jobspree/tracker/templates/tracker/home.html
+++ b/jobspree/tracker/templates/tracker/home.html
@@ -4,22 +4,80 @@
 
 <h1>Total Applications : {{applied.count}}</h1>
 <h1>Average Application Score <span id='average-score'></span></h1>
-
+<h1>Month applied {{month_applied}}</h1>
+<h1>{{month_interviews}}</h1>
 <div>
-  <canvas id="myChart"></canvas>
+  <canvas id="applied_chart"></canvas>
+  <canvas id="interviews_chart"></canvas>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  const ctx = document.getElementById('myChart');
 
-  new Chart(ctx, {
+<script>
+  const applied_chart = document.getElementById('applied_chart');
+  const interviews_chart = document.getElementById('interviews_chart');
+
+  new Chart(applied_chart, {
     type: 'bar',
     data: {
-      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      labels: ['January' , 'February' , 'March' , 'April' , 'May' , 'June' , 'July' , 'August' , 'September' , 'October' , 'November' , 'December'],
       datasets: [{
-        label: '# of Votes',
-        data: [12, 19, 3, 5, 2, 3],
+        label: '# of Applications',
+        data: {{month_applied}},
+        backgroundColor: [
+      'rgba(255, 99, 132, 0.2)',
+      'rgba(255, 159, 64, 0.2)',
+      'rgba(255, 205, 86, 0.2)',
+      'rgba(75, 192, 192, 0.2)',
+      'rgba(54, 162, 235, 0.2)',
+      'rgba(153, 102, 255, 0.2)',
+      'rgba(201, 203, 207, 0.2)'
+    ],
+    borderColor: [
+    'rgb(255, 99, 132)',
+    'rgb(255, 159, 64)',
+    'rgb(255, 205, 86)',
+    'rgb(75, 192, 192)',
+    'rgb(54, 162, 235)',
+    'rgb(153, 102, 255)',
+    'rgb(201, 203, 207)'
+  ],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+  new Chart(interviews_chart, {
+    type: 'bar',
+    data: {
+      labels: ['January' , 'February' , 'March' , 'April' , 'May' , 'June' , 'July' , 'August' , 'September' , 'October' , 'November' , 'December'],
+      datasets: [{
+        label: '# of Interviews',
+        data: {{month_interviews}},
+        backgroundColor: [
+      'rgba(255, 99, 132, 0.2)',
+      'rgba(255, 159, 64, 0.2)',
+      'rgba(255, 205, 86, 0.2)',
+      'rgba(75, 192, 192, 0.2)',
+      'rgba(54, 162, 235, 0.2)',
+      'rgba(153, 102, 255, 0.2)',
+      'rgba(201, 203, 207, 0.2)'
+    ],
+    borderColor: [
+    'rgb(255, 99, 132)',
+    'rgb(255, 159, 64)',
+    'rgb(255, 205, 86)',
+    'rgb(75, 192, 192)',
+    'rgb(54, 162, 235)',
+    'rgb(153, 102, 255)',
+    'rgb(201, 203, 207)'
+  ],
         borderWidth: 1
       }]
     },
@@ -34,5 +92,3 @@
 </script>
 {%endblock%}
 
-{% comment %} questions : How to you get the average of the scores?
-            How do you limit the multi choice to only of the specific user? {% endcomment %}
