--- a/jobspree/tracker/templates/tracker/interview.html
+++ b/jobspree/tracker/templates/tracker/interview.html
@@ -38,6 +38,9 @@
                       <a href="/transcribe/{{interview.id}}">Generate Transcript</a>
                       <div class="transcript">
                       {{interview.transcript}}
+                      <br>
+                      <a href="/suggest/{{interview.id}}">Generate Suggestions</a>
+                      {{interview.suggestions}}
                     </div>
                     </div>
 
