--- a/jobspree/tracker/static/css/style.css
+++ b/jobspree/tracker/static/css/style.css
@@ -1,44 +1,154 @@
 html{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Readex Pro', sans-serif;
 }
 a{
     text-decoration: none;
     color: black;
 }
 *{
-    margin:0
+    margin:0;
+    color : #272838;
 }
+
+
+
 nav{
-    background-color: rgb(201, 201, 201);
+  width: 100%;
+  height: 90px;
+    background-color: #F9F8F8;
     display: flex;
-    justify-content: space-between;
-    height: 50px;
 }
 .main-logo{
     width: 80px;
 }
-.nav-right{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.user-logo{
+  width: 45px;
 }
 .nav-left{
-    width: 100%;
+  width: 50%;
+  display: flex;
+  align-items: center;
+ 
+}
+.nav-right{
+    width: 50%;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: row-reverse;
     align-items: center;
 }
-.nav-item{
-    list-style-type: none;
-    color: white;
-    font-size: 20px;
-    margin: 10px;
 
+.nav-item{
+margin: 20px;
+
+}
+
+
+
+
+
+.home-main-container{
+  width: 100%;
+  height: calc(100vh - 90px);
+  display: flex;
+  align-items: center;
+}
+
+.interviews-container{
+  width: 40%;
+  height: 95%;
+  background-color: #F9F8F8;
+  margin: 20px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.interviews-container h1{
+  margin: 30px;
+}
+.total-container h1{
+  margin: 50px;
+}
+.applied-container h1{
+  margin: 30px;
+}
+.graph{
+  margin: 40px;
+  position: relative;
+}
+.success_rate , .score_avg{
+  position: absolute;
+  background-color: #F9F8F8;
+  text-align: center;
+  padding-top: 15px;
+  border-radius: 100px;
+  border: solid 10px #EB9486;
+  width: 70px;
+  height: 55px;
+  right: -80px;
+  top: 140px;
+}
+.total_success_rate , .total_score_avg{
+  background-color: #F9F8F8;
+  text-align: center;
+  padding-top: 40px;
+  border-radius: 100px;
+  border: solid 20px #EB9486;
+  width: 160px;
+  height: 120px;
+  right: -80px;
+  top: -30px;
+  font-size: 60px;
+}
+
+.total_score_avg{
+  border: solid 20px #F3DE8A;
+}
+
+.score_avg{
+  border: solid 10px #F3DE8A;
+}
+.applied-container{
+  width: 40%;
+  height: 95%;
+  background-color: #F9F8F8;
+  margin: 20px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.total-container{
+  width: 20%;
+  height: 95%;
+  background-color: #F9F8F8;
+  margin: 20px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+
+
+.audio{
+  margin: 0px 20px;
+}
+.line-info{
+  position: absolute;
+  right: 0px;
+  top:0px;
+}
+.line-info-expand{
+  position: absolute;
+  right: 0px;
+  top: 25px;
 }
 table {
     border-collapse: collapse;
     width: 100%;
+    table-layout: auto;
   }
   
   td, th {
@@ -46,10 +156,11 @@ table {
     text-align: left;
     width: 20%;
     padding: 8px;
+    position: relative;
   }
   
   tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: #f9f8f8;
   }
 
   .form-container{
@@ -63,14 +174,14 @@ table {
 
   .main-container{
     width: 100%;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 90px);
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
   .info-container{
-    background-color: rgb(176, 176, 176);
+    background-color: #f9f8f8;
     height: 90%;
     width: 80%;
     border-radius: 40px;
@@ -80,18 +191,18 @@ table {
   .info-container-left{
     width: 50%;
     height: 100%;
-    border-right: black 2px solid;
+    border-right: #272838 2px solid;
   }
   .info-container-right{
     width: 50%;
     height: 100%;
-    border-left: black 2px solid;
+    border-left: #272838 2px solid;
   }
 
   .info-header{
     font-size: 70px;
     text-align: center;
-    border-bottom: black 4px solid;
+    border-bottom: #272838 4px solid;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -137,5 +248,57 @@ table {
   #id_result{
     width: 100%;
     height: 15px;
+    border: none;
+    border-bottom: #272838 2px solid;
+    background-color: #dddddd00;
+  }
+  input , select{
+    width: 100%;
+    border: none;
+    border: none;
+    border-bottom: #272838 2px solid;
+    border-radius: 3px;
+    background-color: none;
+    background-color: #dddddd00;
 
   }
+  .add-button{
+    position: absolute;
+    right: 0px;
+    top: 50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #ffffff00;
+    border: none;
+    
+    
+  }
+
+
+.auth-form-container{
+  background-color: #f9f8f8;
+  width:50%;
+  height: 70%;
+  padding: 40px;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+.auth-form-container label{
+  font-size: 30px;
+  color: rgb(173, 173, 173);
+}
+.auth-form-container button{
+  font-size: 30px;
+  color: rgb(173, 173, 173);
+ width: 100%;
+ height: 70px;
+ margin-top: 20%;
+}
+  
+  
