--- a/jobspree/tracker/templates/registration/sign-up.html
+++ b/jobspree/tracker/templates/registration/sign-up.html
@@ -3,7 +3,8 @@
 {%block title%}Sign Up{% endblock %}
 
 {%block content%}
-
+<div class="main-container">
+<div class="auth-form-container">
 <form method="post" action="">{%csrf_token%}
 
 
@@ -12,7 +13,8 @@
     {{form}}
     <button type="submit">Register</button>
 </form>
-
+</div>
+</div>
 
 
 {% endblock %}
