--- a/jobspree/tracker/static/css/style.css
+++ b/jobspree/tracker/static/css/style.css
@@ -191,12 +191,52 @@ table {
   .info-container-left{
     width: 50%;
     height: 100%;
-    border-right: #272838 2px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
   }
   .info-container-right{
     width: 50%;
     height: 100%;
     border-left: #272838 2px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+.info-transcript audio{
+  margin: 20px;
+}
+  .info-transcript{
+    background-color: white;
+    width:90%;
+    height: 45%;
+    margin: 20px;
+    position: relative;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    overflow: scroll;
+
+  }
+  .generate-icon{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    margin: 20px;
+  }
+  .info-suggestions{
+    background-color: white;
+    width: 90%;
+    height: 45%;
+    margin: 20px;
+    position: relative;
+    border-radius: 30px;
+    padding: 20px;
+    padding-top: 50px;
+
   }
 
   .info-header{
@@ -211,7 +251,7 @@ table {
   .info-score{
     display: flex;
     font-size: 50px;
-    background-color: rgb(223, 223, 223);
+    background-color:#f3de8a;
     border-radius: 40px 0px 0px 0px;
     width: 70px;
     height: 70px;
@@ -220,6 +260,8 @@ table {
     align-items: center;
     justify-content: center;
     margin : 6px;
+    left: 0px;
+    top: 0px;
   }
   .info-body{
     width: 100%;
