--- a/jobspree/tracker/templates/tracker/interview.html
+++ b/jobspree/tracker/templates/tracker/interview.html
@@ -34,6 +34,7 @@
 
 
                       <div class="info-transcript">
+                        <div class="info-transcript-header">
                           <audio controls>
                             <source src="../{{interview.recording}}" type="audio/mpeg">
                           Your browser does not support the audio element.
@@ -41,9 +42,12 @@
                           <a class="generate-icon" href="/transcribe/{{interview.id}}"><span class="material-symbols-outlined">
                             generating_tokens
                             </span></a>
+                          </div>
+                            <div class="suggestions-text">
+                              {{interview.transcript}}
+                            </div>
                         
-                        
-                          {{interview.transcript}}
+                          
                         </div>
                         <div class="info-suggestions">
                           {{interview.suggestions}}
